<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="3dp"
    android:layout_marginVertical="4dp"
    android:background="@drawable/rounded_gradient_bg">

    <TextView
        android:id="@+id/textViewCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CompanyName"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextCompanyName_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCompanyName"
        android:background="@android:color/transparent"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:hint="@string/weHint1"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/textViewCompanyName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="0dp"
        app:srcCompat="@drawable/work_icon" />

    <TextView
        android:id="@+id/textViewJobTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCompanyName_input"
        android:text="@string/JobTitle"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextJobTitle_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewJobTitle"
        android:background="@android:color/transparent"
        android:inputType="textCapCharacters"
        android:hint="@string/weHint2"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewTimePeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextJobTitle_input"
        android:text="@string/weTimePeriod"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextTimePeriod_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTimePeriod"
        android:background="@android:color/transparent"
        android:hint="@string/weHint3"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTimePeriod_input"
        android:text="@string/Details"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextDetails_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDetails"
        android:background="@android:color/transparent"
        android:hint="@string/weHint4"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <ImageButton
        android:id="@+id/btn_remove"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/textViewCompanyName"
        android:background="@drawable/remove_icon"
        android:layout_marginEnd="16dp" />

</RelativeLayout>
