<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="3dp"
    android:layout_marginVertical="4dp"
    android:background="@drawable/rounded_gradient_bg">

    <TextView
        android:id="@+id/textViewProjectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProjectTitle"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editTextProjectTitle_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewProjectTitle"
        android:background="@android:color/transparent"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:hint="@string/pHint1"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/textViewProjectDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextProjectTitle_input"
        android:text="@string/ProjectDescription"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextProjectDescription_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewProjectDescription"
        android:background="@android:color/transparent"
        android:hint="@string/pHint2"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <ImageButton
        android:id="@+id/btn_remove"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/textViewProjectTitle"
        android:background="@drawable/remove_icon"
        android:layout_marginEnd="16dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@id/textViewProjectTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="0dp"
        app:srcCompat="@drawable/project_title_icon" />

</RelativeLayout>
